# WatchBot_System

./: README.md
9175WQW4320/STM32_IR/: STM32_IR.uvguix.49864  STM32_IR.uvoptx  STM32_IR.uvprojx
9175WQW4320/STM32_IR/Listings/: template.map
9175WQW4320/STM32_IR/Objects/: STM32_IR_default.dep  active_buzzer.d  arm_control.crf  guessmine.crf  main.crf  main.d  ps2_key.crf  remote_nec_driver.crf  serov_driver.crf  stm32_slave.d  stm32_usart_slave.crf  template.axf  template.build_log.htm  (+3 more)
WatchBot/: 接线说明.txt
WatchBot/STM32_IR/: STM32_IR.uvguix.49864  STM32_IR.uvguix.49864.bak  STM32_IR.uvoptx  STM32_IR.uvprojx
WatchBot/WatchBot_Controi/: template.uvguix.49864  template.uvoptx  template.uvprojx
WatchBot_System/: ~$成品物料清单.doc  初代物料成本.doc  物料成本.doc
WatchBot_System/STM32_IR/: STM32_IR.uvguix.49864
WatchBot_System/WatchBot_Contro/: template.uvguix.49864  template.uvguix.Administrator  template.uvoptx  template.uvprojx
WatchBot_System/WatchBot_Link/: partitions.csv  sdkconfig  sdkconfig.old
WatchBot_System/WatchBot_Link/main/: CMakeLists.txt  USART_FrameHandler.c  USART_FrameHandler.h  app_camera_lcd.c  app_camera_lcd.h  app_led_control.c  app_led_control.h  camera_driver.c  camera_driver.h  detection_action_handler.c  detection_action_handler.h  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  led_blink.c  led_blink.h  led_ws2812_driver.c  main.c  main.cpp  my_lcd_driver.c  my_lcd_driver.h  my_sd_driver.c  my_sd_driver.h  patrolling.c  patrolling.h  stm32_link.c  stm32_link.h  who_ai_utils.cpp  who_human_face_detection.cpp  who_human_face_detection.hpp
(+551 files in other folders)
