idf_component_register(SRCS "main.cpp" "app_led_control.c" "led_ws2812_driver.c" "my_lcd_driver.c" "my_sd_driver.c" 
                            "camera_driver.c" "led_blink.c" "app_camera_lcd.c" "app_led_control.c" 
                            "who_human_face_detection.cpp" "who_ai_utils.cpp" "stm32_link.c"
                    INCLUDE_DIRS ".")
