idf_component_register(SRCS "patrolling.c" "detection_action_handler.c" "USART_FrameHandler.c" "main.cpp" "app_led_control.c" "my_sd_driver.c"
                            "app_camera_lcd.c" "app_led_control.c" "camera_driver.c"
                            "who_human_face_detection.cpp" "who_ai_utils.cpp" "stm32_link.c"
                            "detection_action_handler.c" "patrolling.c"
                    INCLUDE_DIRS ".")
